# libaosc-rs

./: Cargo.toml  README.md
examples/: fetch_packages.rs  fetch_packages_blocking.rs
src/: arch.rs  lib.rs  packages.rs
