[package]
name = "libaosc"
version = "0.3.0"
edition = "2021"
description = "AOSC Rust useful library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", optional = true }
reqwest = { version = "0.12", features = ["rustls-tls"], optional = true }
tokio = { version = "1.34", features = ["fs"], optional = true }
thiserror = "2"
deb822-lossless = { version = "0.2", features = ["derive"], optional = true }
liblzma = { version = "0.4", optional = true }
async-compression = { version = "0.4", features = ["xz", "futures-io"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = ["download-blocking", "download-async", "parse-pacakges-manifest", "arch"]
download-blocking = ["parse-pacakges-manifest", "dep:reqwest", "reqwest/blocking", "dep:liblzma"]
download-async = ["parse-pacakges-manifest", "dep:tokio", "dep:tokio-util", "dep:futures", "dep:async-compression", "reqwest/stream"]
parse-pacakges-manifest = ["dep:deb822-lossless"]
arch = ["dep:libc"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
